tooling/nargo_cli/tests/snapshots/execution_success/cast_bool/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(x: Field, y: Field) {
    let z: bool = x == y;
    let t: u8 = z as u8;
    assert(t == 1);
}
